--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/fruitastic
-spring.datasource.username=root
-spring.datasource.password=Secret
-spring.datasource.driver-class-name =com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/fruitastic
+spring.datasource.username=${MYSQL_USER:root}
+spring.datasource.password=${MYSQL_PASSWORD:Secret}
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #spring.jpa.show-sql: true
